@@ -1,0 +1,3 @@
+system
+pipe to command
+pipe from command
