@@ -2,6 +2,8 @@
 
 	* Makefile.am (arrayind1): New test.
 	* arrayind1.awk, arrayind1.in, arrayind1.ok: New files.
+	* Makefile.am (sigpipe1): New test.
+	* sigpipe1.awk, sigpipe1.ok: New files.
 
 2016-04-27         Arnold D. Robbins     <arnold@skeeve.com>
 
