@@ -3,6 +3,14 @@
 	* str_array.c (str_lookup): Remove MAYBE_NUM from subscript flags.
 	Bug reported by Andres Legarra <Andres.Legarra@toulouse.inra.fr>.
 
+	Unrelated: Fix issues with SIGPIPE. Reported by
+	Ian Jackson <ijackson@chiark.greenend.org.uk>.
+
+	* builtin.c (do_system): Reset/restore SIGPIPE to/from default around
+	call to system.
+	* io.c (redirect, gawk_popen [PIPES_SIMULATED]): Same.
+
+
 2016-05-12  Eli Zaretskii  <eliz@gnu.org>
 
 	* nonposix.h: Add prototypes for Posix functions emulated in pc/*
